force-app/main/default/objects/Credential_detail__c/Credential_detail__c.object-meta.xml
<CustomObject>
    <label>Credential_detail</label>
    <nameField>
        <displayFormat>CD-{0000}</displayFormat>
        <label>Credential_detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credential_details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>