force-app/main/default/objects/Credential_detail__c/fields/my_Credential__c.field-meta.xml
<CustomField>
    <fullName>my_Credential__c</fullName>
    <label>my-Credential</label>
    <referenceTo>my_Credential__c</referenceTo>
    <relationshipLabel>Credential_details</relationshipLabel>
    <relationshipName>Credential_details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>