force-app/main/default/objects/Credential_detail__c/fields/Redirect_URL__c.field-meta.xml
<CustomField>
    <fullName>Redirect_URL__c</fullName>
    <label>Redirect_URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>