force-app/main/default/objects/Credential_detail__c/fields/Security_answer__c.field-meta.xml
<CustomField>
    <fullName>Security_answer__c</fullName>
    <label>Security answer</label>
    <type>TextArea</type>
</CustomField>