force-app/main/default/objects/Credential_detail__c/fields/Security_question__c.field-meta.xml
<CustomField>
    <fullName>Security_question__c</fullName>
    <label>Security question</label>
    <type>TextArea</type>
</CustomField>