force-app/main/default/objects/Credential_detail__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>Username for site</description>
    <label>Username</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>